--- a/.env
+++ b/.env
@@ -3,7 +3,9 @@ DB_NAME=Master-G
 DB_User=anujnig07
 DB_Password=7Mqiq0WxEfuBM9nz
 PORT=5000
+# FRONTEND_URL=http://localhost:3000
 FRONTEND_URL=https://master-g-frontend.vercel.app
+JWT_SECRET_KEY=AN2004
 JWT_REFRESH_SECRET_KEY=AN2004
 COMPANY_EMAIL=anujnig.07@gmail.com
 GMAIL_APP_PASSWORD=pwbr yarg nhcj kxro
